--- a/index.html
+++ b/index.html
@@ -3,13 +3,31 @@
     <head lang="eng">
         <meta charset="UTF-8">
         <title>Two Way Data Bindings</title>
+        <script src="two-way-bind.js"></script>
     </head>
     <body>
-        Name:<input data-tw-bind="name" type="text">
-        <span data-tw-bind="name"></span>
+        Name:<input data-bind="name" type="text">
+        <span data-bind="name"></span>
         <hr/>
-        Surname: <input data-tw-bind="surname" type="text">
-        <span data-tw-bind="surname"></span>
-        <script src="two-way-bind.js"></script>
+        Surname: <input data-bind="surname" type="text">
+        <span data-bind="surname"></span>
+        <script>
+            dataController( function($scope){
+                $scope.name = "PhaniKumar"
+                $scope.score = 50
+            })
+        </script>
+         <p>Give score</p>
+         <input type="range" data-bind="score" min="0" max="100">
+        <progress data-bind="score" min=0 max=100></progress>    
+        <select data-bind="selection">
+            <option disabled selected value> -- select an option -- </option>
+            <option value="Audi">Audi
+            <option value="BMW">BMW
+            <option value="Mercedes">Mercedes
+            <option value="Volvo">Volvo
+        </select>
+        you selected:
+        <P data-bind="selection"></P>
     </body>
 </html>
